@@ -1,3 +1,9 @@
+2002-09-15  Dom Lachowicz <doml@appligent.com>
+
+	* rsvg.c (rsvg_parse_style_attrs): Support styles in the form of fill="color" in addition to style="fill:color"
+	(rsvg_is_style_arg): Helper fn for above
+	(rsvg_parse_style_pair): Ditto
+	
 2002-09-14  Dom Lachowicz <doml@appligent.com>
 
 	* rsvg.c (rsvg_start_image): draw raster images 
